--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "serve": "vite preview"
     },
     "devDependencies": {
+        "sass": "^1.57.1",
         "typescript": "^4.9.4",
         "vite": "^4.0.3",
         "vite-plugin-solid": "^2.5.0"
