--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "sass": "^1.57.1",
         "typescript": "^4.9.4",
         "vite": "^4.0.3",
-        "vite-plugin-solid": "^2.5.0"
+        "vite-plugin-solid": "^2.5.0",
+        "vite-tsconfig-paths": "^4.0.3"
     },
     "dependencies": {
         "solid-js": "^1.6.6"
