--- a/package.json
+++ b/package.json
@@ -2,23 +2,30 @@
     "name": "untitled-chat-client",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/client/index.tsx",
     "license": "GPT3",
     "keywords": [],
     "author": "",
     "scripts": {
-        "develop": "vite",
+        "dev-client": "vite",
+        "dev-server": "nodemon src/server/index.ts",
         "build": "vite build",
         "serve": "vite preview"
     },
     "devDependencies": {
-        "sass": "^1.57.1",
+        "@types/express": "^4.17.15",
+        "@types/node": "^18.11.18",
+        "nodemon": "^2.0.20",
+        "ts-node": "^10.9.1",
         "typescript": "^4.9.4",
         "vite": "^4.0.3",
         "vite-plugin-solid": "^2.5.0",
         "vite-tsconfig-paths": "^4.0.3"
     },
     "dependencies": {
+        "@solidjs/router": "^0.6.0",
+        "express": "^4.18.2",
+        "sass": "^1.57.1",
         "solid-js": "^1.6.6"
     }
 }
