--- a/package.json
+++ b/package.json
@@ -8,7 +8,42 @@
     "author": "",
     "scripts": {
         "dev-client": "vite",
-        "dev-server": "nodemon src/server/index.ts",
+        "dev-server": "nodemon src/server/index.ts"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "semi": false,
+        "tabWidth": 4
+    },
+    "eslintConfig": {
+        "env": {
+            "browser": true,
+            "es2021": true
+        },
+        "parser": "@typescript-eslint/parser",
+        "plugins": [
+            "solid", 
+            "prettier"
+        ],
+        "extends": [
+            "eslint:recommended", 
+            "plugin:solid/typescript", 
+            "prettier"
+        ],
+        "parserOptions": {
+            "ecmaVersion": "latest",
+            "sourceType": "module",
+            "project": ["./tsconfig.json"] 
+        },
+        "rules": {
+            "no-unused-vars": "warn",
+            "prettier/prettier": ["error"]
+        }
+    },
+    "nodemonConfig":{
+        "execMap": {
+            "ts": "ts-node"
+        }
     },
     "devDependencies": {
         "@types/express": "^4.17.15",
