--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 3030:3030
     volumes:
-      - .:/chat-client
+      - ./src:/chat-client/src
 
   client:
     build:
