--- a/package.json
+++ b/package.json
@@ -42,10 +42,8 @@
             ]
         },
         "rules": {
-            "no-unused-vars": "warn",
-            "prettier/prettier": [
-                "error"
-            ]
+            "@typescript-eslint/no-unused-vars": "warn",
+            "prettier/prettier": "warn"
         }
     },
     "nodemonConfig": {
