--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     },
     "prettier": {
         "endOfLine": "auto",
-        "ignorePatterns": ["node_modules/*"],
+        "ignorePatterns": [
+            "node_modules/*"
+        ],
         "singleQuote": true,
         "semi": false,
         "tabWidth": 4
     },
     "eslintConfig": {
-        "ignorePatterns": ["node_modules/*"],
+        "ignorePatterns": [
+            "node_modules/*"
+        ],
         "env": {
             "browser": true,
             "es2021": true
@@ -73,6 +77,7 @@
         "@solidjs/router": "^0.6.0",
         "express": "^4.18.2",
         "sass": "^1.57.1",
-        "solid-js": "^1.6.6"
+        "solid-js": "^1.6.6",
+        "ws": "^8.12.0"
     }
 }
