--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,63 @@
 version: '3.3'
 
+volumes:
+  mariadb:
+  node_modules:
+
 services:
-  database:
-    build: docker/database
-    container_name: database
+  mariadb:
+    build:
+      context: docker/mariadb
+    container_name: mariadb 
     environment:
-      MARIADB_USER: user
-      MARIADB_PASSWORD: password
-      MARIADB_ROOT_PASSWORD: password
+      MARIADB_USER: ${USER}
+      MARIADB_PASSWORD: ${PASSWORD}
+      MARIADB_ROOT_PASSWORD: ${PASSWORD}
+    ports:
+      - 3306:3306
+    volumes:
+      - mariadb:/var/lib/mysql
+
+  adminer:
+    build:
+      context: docker/adminer
+    container_name: adminer 
+    restart: always
+    environment:
+      ADMINER_DESIGN: pepa-linha-dark
+      ADMINER_DEFAULT_SERVER: mariadb 
+    ports:
+      - 3001:8080
 
   server:
     build:
       context: .
       dockerfile: docker/server/Dockerfile
+      args:
+        UID: ${UID}
+        GID: ${GID}
+        USER: ${USER}
     container_name: server 
-    ports:
-      - 3030:3030
     volumes:
-      - ./src:/home/user/server/src
+      - ./src:/build/src
+      - node_modules:/build/node_modules
 
   client:
     build:
       context: .
       dockerfile: docker/client/Dockerfile
+      args:
+        UID: ${UID}
+        GID: ${GID}
+        USER: ${USER}
     depends_on: [ server ]
     container_name: client
     ports:
       - 3000:3000
       - 3010:3010
     volumes:
-      - ./src:/home/user/client/src
+      - ./src:/build/src
+      - node_modules:/build/node_modules
+
+
   
