--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.15",
+        "@types/mysql": "^2.15.21",
         "@types/node": "^18.11.18",
+        "@types/ws": "^8.5.4",
         "@typescript-eslint/eslint-plugin": "^5.48.1",
         "@typescript-eslint/parser": "^5.48.1",
         "eslint": "^8.31.0",
@@ -77,6 +79,7 @@
     "dependencies": {
         "@solidjs/router": "^0.6.0",
         "express": "^4.18.2",
+        "mysql": "^2.18.1",
         "sass": "^1.57.1",
         "solid-js": "^1.6.6",
         "ws": "^8.12.0"
