--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
         GID: ${GID}
         USER: ${USER}
     container_name: server 
+    ports:
+      - 3030:3030
     volumes:
       - ./src:/build/src
       - node_modules:/build/node_modules
