--- a/package.json
+++ b/package.json
@@ -58,11 +58,12 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.15",
-        "@types/mysql": "^2.15.21",
         "@types/node": "^18.11.18",
+        "@types/uuid": "^9.0.0",
         "@types/ws": "^8.5.4",
         "@typescript-eslint/eslint-plugin": "^5.48.1",
         "@typescript-eslint/parser": "^5.48.1",
+        "dotenv": "^16.0.3",
         "eslint": "^8.31.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
@@ -79,9 +80,10 @@
     "dependencies": {
         "@solidjs/router": "^0.6.0",
         "express": "^4.18.2",
-        "mysql": "^2.18.1",
+        "mysql2": "^3.1.1",
         "sass": "^1.57.1",
         "solid-js": "^1.6.6",
+        "uuid": "^9.0.0",
         "ws": "^8.12.0"
     }
 }
