--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "author": "",
     "scripts": {
         "dev-client": "vite",
-        "dev-server": "nodemon src/server/index.ts",
+        "dev-server": "nodemon server/index.ts",
         "build-client": "vite build"
     },
     "prettier": {
@@ -57,33 +57,34 @@
         }
     },
     "devDependencies": {
-        "@types/express": "^4.17.15",
-        "@types/node": "^18.11.18",
-        "@types/uuid": "^9.0.0",
+        "@types/express": "^4.17.17",
+        "@types/node": "^20.2.5",
+        "@types/uuid": "^9.0.1",
         "@types/ws": "^8.5.4",
-        "@typescript-eslint/eslint-plugin": "^5.48.1",
-        "@typescript-eslint/parser": "^5.48.1",
-        "dotenv": "^16.0.3",
-        "eslint": "^8.31.0",
-        "eslint-config-prettier": "^8.6.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.9",
+        "@typescript-eslint/parser": "^5.59.9",
+        "dotenv": "^16.1.4",
+        "eslint": "^8.42.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-solid": "^0.9.2",
-        "nodemon": "^2.0.20",
-        "prettier": "^2.8.2",
+        "eslint-plugin-solid": "^0.12.1",
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.4",
-        "vite": "^4.0.3",
+        "typescript": "^5.1.3",
+        "vite": "^4.3.9",
         "vite-plugin-eslint": "^1.8.1",
-        "vite-plugin-solid": "^2.5.0",
-        "vite-tsconfig-paths": "^4.0.3"
+        "vite-plugin-solid": "^2.7.0",
+        "vite-tsconfig-paths": "^4.2.0"
     },
     "dependencies": {
-        "@solidjs/router": "^0.6.0",
+        "@solidjs/router": "^0.8.2",
         "express": "^4.18.2",
-        "mysql2": "^3.1.1",
-        "sass": "^1.57.1",
-        "solid-js": "^1.6.6",
+        "mysql2": "^3.3.3",
+        "pnpm": "^8.6.1",
+        "sass": "^1.62.1",
+        "solid-js": "^1.7.6",
         "uuid": "^9.0.0",
-        "ws": "^8.12.0"
+        "ws": "^8.13.0"
     }
 }
